k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taikai
  labels:
    app: taikai
    environment: production
